<resources>
    <string name="app_name">Desarrollo De Aplicaciones</string>
    <string name="app_title_splitwise"> SplitWise</string>
    <string name="login_subtitle">Inicia sesión en tu cuenta</string>
    <string name="email">Correo electrónico</string>
    <string name="password">Contraseña</string>
    <string name="forgot_password">¿Olvidaste tu contraseña?</string>
    <string name="login">Iniciar Sesión</string>
    <string name="or_continue_with">O continúa con</string>
    <string name="continue_with_google">Continuar con Google</string>
    <string name="dont_have_account">¿No tienes cuenta? </string>
    <string name="create_account">Crear cuenta</string>
    <string name="reset_title">Restablecer contraseña</string>
    <string name="reset_subtitle">Ingresa el código y tu nueva contraseña</string>
    <string name="reset_section">Código de verificación y nueva contraseña</string>

    <string name="label_code">Código de verificación</string>
    <string name="label_new_password">Nueva contraseña</string>
    <string name="label_confirm_password">Confirmar nueva contraseña</string>

    <string name="hint_code">123456</string>
    <string name="hint_password">•••••••</string>

    <string name="btn_reset_password">Restablecer contraseña</string>
    <string name="cd_empty_icon">Ícono de grupo vacío</string>
</resources>